<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nav" />
    <item
        android:id="@+id/products_page"
        android:icon="@drawable/ic_products"
        android:title="@string/products_nav" />

    <item
        android:id="@+id/promotions_page"
        android:icon="@drawable/ic_promotions"
        android:title="@string/promotions_nav" />

    <item
        android:id="@+id/invoice_page"
        android:icon="@drawable/ic_invoice"
        android:title="@string/invoice_nav" />

    <item
        android:id="@+id/account_page"
        android:icon="@drawable/ic_account"
        android:title="@string/account_nav" />
</menu>